Added in bootstrap menu and customised for Wylder

--- a/_factory_admin_page_menus.html
+++ b/_factory_admin_page_menus.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <meta name="description" content="">
         <meta name="author" content="">
-        <title>Blank Template for Bootstrap</title>
+        <title>Admin Page Menus</title>
         <!-- Bootstrap core CSS -->
         <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet">
         <!-- Custom styles for this template -->
@@ -20,12 +20,12 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-12 text-end">
-                        <a href="#" name="anchor" class="fw-bolder text-decoration-none text-white">Login</a>                          
+                        <a href="#" name="anchor" class="fw-bolder text-decoration-none text-white">Login</a> 
                     </div>
                 </div>
             </div>
         </section>
-        <section>
+        <section class="pd-admin-page-menu-1">
             <nav class="bg-light navbar navbar-expand-lg navbar-light">
                 <div class="container">
                     <a href="/" class="navbar-brand" href="#"><img width="140" src="images/design-assets/fort-logo.svg"></a>
@@ -34,12 +34,27 @@
                     </button>
                     <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
                         <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-                            <li class="nav-item"><a class="nav-link active" aria-current="page" href="#">Home</a>
+                            <li class="nav-item"><a class="nav-link active" aria-current="page" href="#">Dashboard</a>
                             </li>
-                            <li class="nav-item"><a class="nav-link" href="#">Link</a>
+                            <li class="nav-item"><a class="nav-link" href="#">Reported</a>
                             </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+                            <li class="nav-item dropdown"><a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+            Content </a>
+                                <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                    <li>
+                                        <a class="dropdown-item" href="#">Daily Challenges</a>
+                                    </li>
+                                    <li>
+                                        <a class="dropdown-item" href="#">Challenge Bank</a>
+                                    </li>
+                                    <li>
+                                        <a class="dropdown-item" href="#">Other Content</a>
+                                    </li>
+                                </ul>
+                            </li>
+                            <li class="nav-item"><a class="nav-link" href="#">Users</a>
+                            </li>
+                            <li class="nav-item"><a class="nav-link" href="#">Stats</a>
                             </li>
                         </ul>
                     </div>
