Added more features to side menu

--- a/_factory_admin_page_menus_2.html
+++ b/_factory_admin_page_menus_2.html
@@ -16,41 +16,35 @@
         <!-- Bootstrap core JavaScript
     ================================================== -->
         <!-- Placed at the end of the document so the pages load faster -->
-        <section>
+        <section style="position: relative;">
+            <div class="pd-admin-page-menu-2">
+                <div id="navOuter" class="pd-admin-page-menu-2-outer"><a href="#" class="pd-admin-page-2-open-close-outer "><div class="pd-admin-page-2-open-close-horizontal"></div><div class="pd-admin-page-2-open-close-vertical"></div></a>
+                    <div id="navInner" class="pd-admin-page-menu-2-inner">
+                        <header>
+                            <img src="images/uploads/logo-wylder.webp" alt="logo" width="60" height="60">
+                            <h2>Menu</h2>
+                        </header>
+                        <div class="pd-admin-page-menu-2-wrapper-links"><a class="pd-active" href="#" name="anchor">Dashboard</a><a href="#" name="anchor">Reported</a>
+                            <h3>Manage Content</h3>
+                            <div><a class="pd-active" href="#" name="anchor">Daily Challenges</a><a href="#" name="anchor">Challenge Bank</a><a href="#" name="anchor">Other</a>
+                            </div><a href="#" name="anchor">Users</a><a href="#" name="anchor">Statistics</a>
+                        </div>
+                        <footer class="pd-admin-page-menu-2-user-widget">
+                            <img src="images/uploads/testimonial-woman-2.jpg" alt="logged in user" width="40" height="40">
+                            <div class="pd-admin-page-menu-2-user-name">
+                                <p>Kate Nicholls</p><a href="#">Log Out</a>
+                            </div>
+                        </footer>
+                    </div>
+                </div>                 
+            </div>
             <div class="container-fluid">
                 <div class="row">
-                    <div class="pd-admin-page-menu-2" style="background: #010014;">
-                        <div id="navOuter" class="pd-admin-page-menu-2-outer">
-                            <div id="navInner" class="pd-admin-page-menu-2-inner">
-                                <header>
-                                    <img src="images/uploads/logo-wylder.webp" alt="logo" width="60" height="60">
-                                    <h2>Menu</h2>
-                                </header>
-                                <div class="pd-admin-page-menu-2-wrapper-links">
-                                    <a href="#" name="anchor">Dashboard</a>
-                                    <a href="#" name="anchor">Reported</a>
-                                    <h3>Manage Content</h3>
-                                    <div>
-                                        <a href="#" name="anchor">Daily Challenges</a>
-                                        <a href="#" name="anchor">Challenge Bank</a>
-                                        <a href="#" name="anchor">Other</a>
-                                    </div>
-                                    <a href="#" name="anchor">Users</a>
-                                    <a href="#" name="anchor">Statistics</a>
-                                </div>
-                                <footer class="pd-admin-page-menu-2-user-widget">
-                                    <img src="images/uploads/testimonial-woman-2.jpg" alt="logged in user" width="40" height="40">
-                                    <div class="pd-admin-page-menu-2-user-name">
-                                        <p>Kate Nicholls</p>
-                                        <a href="#">Log Out</a>
-                                    </div>
-                                </footer>
-                            </div>
-                        </div>                         
-                    </div>
                     <div class="col-lg pd-admin-main-content-2">
                         <div style="background: gray;">
                             <h1>Dashboard</h1>
+                            <p>Paragraph</p>
+                            <a href="https://www.pendigital.co.uk" name="anchor">Pendigital</a>
                         </div>                         
                     </div>
                 </div>
