--- a/_factory_admin_tables.html
+++ b/_factory_admin_tables.html
@@ -26,7 +26,8 @@
                 <div class="row">
                     <div class="col-lg-12">
                         <div class="pd-admin-table-1">
-                            <header class="pb-2"><a href="#" name="anchor">Back</a>
+                            <header class="pb-2">
+                                <a href="#" name="anchor">Back</a>
                                 <h1>Admin Table</h1>
                                 <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
                             </header>
@@ -49,19 +50,19 @@
                                         </thead>
                                         <tbody>
                                             <tr>
-                                                <th scope="row">01 Jul 23</th>
+                                                <th scope="row">01 Jul</th>
                                                 <td>sam_23</td>
                                                 <td>Offensive</td>
                                                 <td>Find an Oak Tree</td>
                                             </tr>
                                             <tr>
-                                                <th scope="row">29 Jun 23</th>
+                                                <th scope="row">29 Jun</th>
                                                 <td>jacob_oak</td>
                                                 <td>Advertising</td>
                                                 <td>Red Admiral Butterflies</td>
                                             </tr>
                                             <tr>
-                                                <th scope="row">26 Jun 23</th>
+                                                <th scope="row">26 Jun</th>
                                                 <td>tamsin_52</td>
                                                 <td>Irrelevant</td>
                                                 <td>Spring Streams</td>
@@ -72,11 +73,14 @@
                                 <div>
                                     <nav aria-label="Page navigation example">
                                         <ul class="pagination">
-                                            <li class="page-item"><a class="page-link" href="#">1</a>
+                                            <li class="active page-item">
+                                                <a class="page-link" href="#">1</a>
                                             </li>
-                                            <li class="page-item"><a class="page-link" href="#">2</a>
+                                            <li class="page-item">
+                                                <a class="page-link" href="#">2</a>
                                             </li>
-                                            <li class="page-item"><a class="page-link" href="#">3</a>
+                                            <li class="page-item">
+                                                <a class="page-link" href="#">3</a>
                                             </li>
                                         </ul>
                                     </nav>
