--- a/_factory_admin_tables.html
+++ b/_factory_admin_tables.html
@@ -26,8 +26,7 @@
                 <div class="row">
                     <div class="col-lg-12">
                         <div class="pd-admin-table-1">
-                            <header class="pb-2">
-                                <a href="#" name="anchor">Back</a>
+                            <header class="pb-2"><a href="#" name="anchor">Back</a>
                                 <h1>Admin Table</h1>
                                 <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
                             </header>
@@ -43,7 +42,7 @@
                                         <thead>
                                             <tr>
                                                 <th scope="col">Date</th>
-                                                <th scope="col">User Name</th>
+                                                <th scope="col">Offender User Name</th>
                                                 <th scope="col">Offense Type</th>
                                                 <th scope="col">Challenge Title</th>
                                             </tr>
@@ -73,14 +72,11 @@
                                 <div>
                                     <nav aria-label="Page navigation example">
                                         <ul class="pagination">
-                                            <li class="active page-item">
-                                                <a class="page-link" href="#">1</a>
+                                            <li class="active page-item"><a class="page-link" href="#">1</a>
                                             </li>
-                                            <li class="page-item">
-                                                <a class="page-link" href="#">2</a>
+                                            <li class="page-item"><a class="page-link" href="#">2</a>
                                             </li>
-                                            <li class="page-item">
-                                                <a class="page-link" href="#">3</a>
+                                            <li class="page-item"><a class="page-link" href="#">3</a>
                                             </li>
                                         </ul>
                                     </nav>
