Added dashboard screen

--- a/_factory_admin_form.html
+++ b/_factory_admin_form.html
@@ -26,7 +26,8 @@
                 <div class="row">
                     <div class="col-lg-12">
                         <div class="pd-admin-form-1">
-                            <header class="pb-2"><a href="#" name="anchor">Back</a>
+                            <header class="pb-2">
+                                <a href="#" name="anchor">Back</a>
                                 <h1>New Daily Challenge</h1>
                                 <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
                             </header>
