--- a/_factory_admin_page_menus_2.html
+++ b/_factory_admin_page_menus_2.html
@@ -23,29 +23,22 @@
                 <div class="pd-admin-page-menu-2-hamburger-bar"></div>
             </div>
             <div class="pd-admin-page-menu-2">
-                <div id="navOuter" class="pd-admin-page-menu-2-outer"><a href="#" class="pd-admin-page-2-open-close-outer "><div class="pd-admin-page-2-open-close-horizontal"></div><div class="pd-admin-page-2-open-close-vertical"></div></a>
+                <div id="navOuter" class="pd-admin-page-menu-2-outer">
+                    <a href="#" class="pd-admin-page-2-open-close-outer "><div class="pd-admin-page-2-open-close-horizontal"></div><div class="pd-admin-page-2-open-close-vertical"></div></a>
                     <div id="navInner" class="pd-admin-page-menu-2-inner">
                         <header>
                             <img src="images/uploads/logo-wylder.webp" alt="logo" width="60" height="60">
                             <h2>Menu</h2>
                         </header>
-                        <div class="pd-admin-page-menu-2-wrapper-links">
-                            <a class="pd-active" href="#" name="anchor">Dashboard</a>
-                            <a href="#" name="anchor">Reported</a>
+                        <div class="pd-admin-page-menu-2-wrapper-links"><a class="pd-active" href="#" name="anchor">Dashboard</a><a href="#" name="anchor">Reported</a>
                             <h3>Manage Content</h3>
-                            <div>
-                                <a class="pd-active" href="#" name="anchor">Daily Challenges</a>
-                                <a href="#" name="anchor">Challenge Bank</a>
-                                <a href="#" name="anchor">Other</a>
-                            </div>
-                            <a href="#" name="anchor">Users</a>
-                            <a href="#" name="anchor">Statistics</a>
+                            <div><a class="pd-active" href="#" name="anchor">Daily Challenges</a><a href="#" name="anchor">Challenge Bank</a><a href="#" name="anchor">Other</a>
+                            </div><a href="#" name="anchor">Users</a><a href="#" name="anchor">Statistics</a>
                         </div>
                         <footer class="pd-admin-page-menu-2-user-widget">
                             <img src="images/uploads/testimonial-woman-2.jpg" alt="logged in user" width="40" height="40">
                             <div class="pd-admin-page-menu-2-user-name">
-                                <p>Kate Nicholls</p>
-                                <a href="#">Log Out</a>
+                                <p>Kate Nicholls</p><a href="#">Log Out</a>
                             </div>
                         </footer>
                     </div>
@@ -56,64 +49,89 @@
                     <div class="col-lg pd-admin-main-content-2 pt-2">
                         <div class="row">
                             <div class="col-md-12">
-                                <div class="pd-admin-table-1">
-                                    <header class="pb-2"><a href="#" name="anchor">Back</a>
-                                        <h1>Admin Table</h1>
+                                <div class="pd-admin-dashboard-1">
+                                    <header class="pb-2">
+                                        <h1>Dashboard</h1>
                                         <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
                                     </header>
-                                    <div class="pd-admin-table-1-outer">
-                                        <div class="pd-admin-table-1-search">
-                                            <div class="input-group mb-3">
-                                                <input type="text" class="form-control" placeholder="Search username" aria-label="Search username" aria-describedby="search-username">
-                                                <button class="btn btn-outline-primary" type="button" id="search-username">Search</button>
+                                    <div class="align-items-start d-flex flex-row flex-wrap justify-content-center justify-content-lg-start pd-admin-dashboard-1-body">
+                                        <div class="pd-admin-dashboard-1-card">
+                                            <header>
+                                                <h2>Reported Posts</h2>
+                                            </header>
+                                            <div class="pd-admin-dashboard-1-card-body">
+                                                <div class="pd-admin-dashboard-1-card-body-big-stat"><span><p>2</p></span>
+                                                    <hr>
+                                                    <p>Unresolved</p>
+                                                </div>
                                             </div>
+                                            <footer>
+                                                <button type="button" class="btn btn-primary">View Unresolved</button>
+                                            </footer>
                                         </div>
-                                        <div class="pd-admin-table-1-inner table-responsive">
-                                            <table class="table table-hover">
-                                                <thead>
-                                                    <tr>
-                                                        <th scope="col">Date</th>
-                                                        <th scope="col">User Name</th>
-                                                        <th scope="col">Offense Type</th>
-                                                        <th scope="col">Challenge Title</th>
-                                                    </tr>
-                                                </thead>
-                                                <tbody>
-                                                    <tr>
-                                                        <th scope="row">01 Jul</th>
-                                                        <td>sam_23</td>
-                                                        <td>Offensive</td>
-                                                        <td>Find an Oak Tree</td>
-                                                    </tr>
-                                                    <tr>
-                                                        <th scope="row">29 Jun</th>
-                                                        <td>jacob_oak</td>
-                                                        <td>Advertising</td>
-                                                        <td>Red Admiral Butterflies</td>
-                                                    </tr>
-                                                    <tr>
-                                                        <th scope="row">26 Jun</th>
-                                                        <td>tamsin_52</td>
-                                                        <td>Irrelevant</td>
-                                                        <td>Spring Streams</td>
-                                                    </tr>
-                                                </tbody>
-                                            </table>
+                                        <div class="pd-admin-dashboard-1-card">
+                                            <header>
+                                                <h2>Daily Challenges</h2>
+                                            </header>
+                                            <div class="pd-admin-dashboard-1-card-body">
+                                                <div class="pd-admin-dashboard-1-card-body-table">
+                                                    <table class="table">
+                                                        <thead>
+                                                            <tr>
+                                                                <th scope="col">Day</th>
+                                                                <th scope="col">Title</th>
+                                                            </tr>
+                                                        </thead>
+                                                        <tbody>
+                                                            <tr>
+                                                                <th scope="row">Today</th>
+                                                                <td>Find spring flowers</td>
+                                                            </tr>
+                                                            <tr>
+                                                                <th scope="row">T + 1</th>
+                                                                <td>Water everywhere</td>
+                                                            </tr>
+                                                            <tr>
+                                                                <th scope="row">T + 2</th>
+                                                                <td colspan="2">Mallards swimming</td>
+                                                            </tr>
+                                                            <tr>
+                                                                <th scope="row">T + 3</th>
+                                                                <td colspan="2">No challenge</td>
+                                                            </tr>
+                                                            <tr>
+                                                                <th scope="row">T + 4</th>
+                                                                <td colspan="2">No challenge</td>
+                                                            </tr>
+                                                            <tr>
+                                                                <th scope="row">T + 5</th>
+                                                                <td colspan="2">No challenge</td>
+                                                            </tr>
+                                                        </tbody>
+                                                    </table>
+                                                </div>
+                                            </div>
+                                            <footer>
+                                                <button type="button" class="btn btn-primary">Create Daily Challenge</button>
+                                                <button type="button" class="btn btn-primary ms-1">View All</button>
+                                            </footer>
                                         </div>
-                                        <div>
-                                            <nav aria-label="Page navigation example">
-                                                <ul class="pagination">
-                                                    <li class="active page-item"><a class="page-link" href="#">1</a>
-                                                    </li>
-                                                    <li class="page-item"><a class="page-link" href="#">2</a>
-                                                    </li>
-                                                    <li class="page-item"><a class="page-link" href="#">3</a>
-                                                    </li>
-                                                </ul>
-                                            </nav>
+                                        <div class="pd-admin-dashboard-1-card">
+                                            <header>
+                                                <h2>Users</h2>
+                                            </header>
+                                            <div class="pd-admin-dashboard-1-card-body">
+                                                <div class="pd-admin-dashboard-1-card-body-big-stat"><span><p>1024</p></span>
+                                                    <hr>
+                                                    <p>Total Users</p>
+                                                </div>
+                                            </div>
+                                            <footer>
+                                                <button type="button" class="btn btn-primary">View Users</button>
+                                            </footer>
                                         </div>
                                     </div>
-                                </div>                                                                  
+                                </div>                                 
                             </div>
                         </div>                         
                     </div>
