Added nested list component to admin forms

--- a/_factory_admin_form.html
+++ b/_factory_admin_form.html
@@ -91,6 +91,56 @@
                                             <input type="url" placeHolder="Add artist website link" name="artistWebsiteLink" class="form-control" id="artistWebsiteLink">
                                         </div>
                                     </div>
+                                    <div class="mb-3 pd-admin-form-1-nested-list">
+                                        <header>
+                                            <h2>Challenges</h2>
+                                            <p>Manage challenges for this challenge bank below.</p>
+                                        </header>
+                                        <div class="pd-form-1-nested-list-inner">
+                                            <div class="mb-1 pd-form-1-nested-list-item"><a href="#" class="pd-form-1-nested-list-item-img-outer"> <img src="https://pinegrow.com/placeholders/img20.jpg"> </a>
+                                                <div class="pd-form-1-nested-list-item-body">
+                                                    <h3>Life in the cracks</h3>
+                                                    <p>Find nature that has found its way...</p>
+                                                </div>
+                                                <div class="pd-form-1-nested-list-item-buttons">
+                                                    <a href="#" class="pd-form-1-nested-list-item-view-outer"><img src="images/design-assets/icon-magnifying-glass-gray-600.svg" alt="view icon" width="20" height="20"></a>
+                                                    <div class="pd-form-1-nested-list-item-btn-outer">
+                                                        <a href="#" name="anchor" class="pd-form-1-nested-list-item-btn"><img alt="re-order downwards icon" width="16" height="16" src="images/design-assets/icon-caret-white-up.svg"></a>
+                                                        <a href="#" name="anchor" class="pd-form-1-nested-list-item-btn"><img src="images/design-assets/icon-caret-white.svg" alt="re-order downwards icon" width="16" height="16"></a>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                            <div class="mb-1 pd-form-1-nested-list-item"><a href="#" class="pd-form-1-nested-list-item-img-outer"> <img src="images/uploads/hero-coast.jpg"> </a>
+                                                <div class="pd-form-1-nested-list-item-body">
+                                                    <h3>Coast Walk</h3>
+                                                    <p>Find nature that has found its way...</p>
+                                                </div>
+                                                <div class="pd-form-1-nested-list-item-buttons">
+                                                    <a href="#" class="pd-form-1-nested-list-item-view-outer"><img src="images/design-assets/icon-magnifying-glass-gray-600.svg" alt="view icon" width="20" height="20"></a>
+                                                    <div class="pd-form-1-nested-list-item-btn-outer">
+                                                        <a href="#" name="anchor" class="pd-form-1-nested-list-item-btn"><img alt="re-order downwards icon" width="16" height="16" src="images/design-assets/icon-caret-white-up.svg"></a>
+                                                        <a href="#" name="anchor" class="pd-form-1-nested-list-item-btn"><img src="images/design-assets/icon-caret-white.svg" alt="re-order downwards icon" width="16" height="16"></a>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                            <div class="mb-1 pd-form-1-nested-list-item"><a href="#" class="pd-form-1-nested-list-item-img-outer"> <img src="images/uploads/login-flower.jpg"> </a>
+                                                <div class="pd-form-1-nested-list-item-body">
+                                                    <h3>Pollinators</h3>
+                                                    <p>Find nature that has found its way...</p>
+                                                </div>
+                                                <div class="pd-form-1-nested-list-item-buttons">
+                                                    <a href="#" class="pd-form-1-nested-list-item-view-outer"><img src="images/design-assets/icon-magnifying-glass-gray-600.svg" alt="view icon" width="20" height="20"></a>
+                                                    <div class="pd-form-1-nested-list-item-btn-outer">
+                                                        <a href="#" name="anchor" class="pd-form-1-nested-list-item-btn"><img alt="re-order downwards icon" width="16" height="16" src="images/design-assets/icon-caret-white-up.svg"></a>
+                                                        <a href="#" name="anchor" class="pd-form-1-nested-list-item-btn"><img src="images/design-assets/icon-caret-white.svg" alt="re-order downwards icon" width="16" height="16"></a>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <footer>
+                                            <a name="anchor" class="btn btn-outline-dark">Create Challenge</a>
+                                        </footer>
+                                    </div>
                                     <div class="mb-3">
                                         <button type="button" class="btn btn-info me-2">Save</button>
                                         <button type="button" class="btn btn-outline-dark me-2">Cancel</button>
