--- a/_factory_admin_form.html
+++ b/_factory_admin_form.html
@@ -97,7 +97,8 @@
                                             <p>Manage challenges for this challenge bank below.</p>
                                         </header>
                                         <div class="pd-form-1-nested-list-inner">
-                                            <div class="mb-1 pd-form-1-nested-list-item"><a href="#" class="pd-form-1-nested-list-item-img-outer"> <img src="https://pinegrow.com/placeholders/img20.jpg"> </a>
+                                            <div class="mb-1 pd-form-1-nested-list-item">
+                                                <a href="#" class="pd-form-1-nested-list-item-img-outer"> <img src="https://pinegrow.com/placeholders/img20.jpg"> </a>
                                                 <div class="pd-form-1-nested-list-item-body">
                                                     <h3>Life in the cracks</h3>
                                                     <p>Find nature that has found its way...</p>
@@ -110,7 +111,8 @@
                                                     </div>
                                                 </div>
                                             </div>
-                                            <div class="mb-1 pd-form-1-nested-list-item"><a href="#" class="pd-form-1-nested-list-item-img-outer"> <img src="images/uploads/hero-coast.jpg"> </a>
+                                            <div class="mb-1 pd-form-1-nested-list-item">
+                                                <a href="#" class="pd-form-1-nested-list-item-img-outer"> <img src="images/uploads/hero-coast.jpg"> </a>
                                                 <div class="pd-form-1-nested-list-item-body">
                                                     <h3>Coast Walk</h3>
                                                     <p>Find nature that has found its way...</p>
@@ -123,7 +125,8 @@
                                                     </div>
                                                 </div>
                                             </div>
-                                            <div class="mb-1 pd-form-1-nested-list-item"><a href="#" class="pd-form-1-nested-list-item-img-outer"> <img src="images/uploads/login-flower.jpg"> </a>
+                                            <div class="mb-1 pd-form-1-nested-list-item">
+                                                <a href="#" class="pd-form-1-nested-list-item-img-outer"> <img src="images/uploads/login-flower.jpg"> </a>
                                                 <div class="pd-form-1-nested-list-item-body">
                                                     <h3>Pollinators</h3>
                                                     <p>Find nature that has found its way...</p>
@@ -136,9 +139,55 @@
                                                     </div>
                                                 </div>
                                             </div>
+                                            <hr>
+                                            <h2>Alternative challenges</h2>
+                                            <p>Manage alternative challenges for this challenge bank below.</p>
+                                            <div class="mb-1 pd-form-1-nested-list-item"><a href="#" class="pd-form-1-nested-list-item-img-outer"> <img src="images/uploads/login-flower.jpg"> </a>
+                                                <div class="pd-form-1-nested-list-item-body">
+                                                    <h3>Be happy</h3>
+                                                    <p>Find something that makes you smile</p>
+                                                </div>
+                                                <div class="alternative-card pd-form-1-nested-list-item-buttons">
+                                                    <a href="#" class="pd-form-1-nested-list-item-view-outer"><img src="images/design-assets/icon-magnifying-glass-gray-600.svg" alt="view icon" width="20" height="20"></a>
+                                                </div>
+                                            </div>
+                                            <div class="mb-1 pd-form-1-nested-list-item"><a href="#" class="pd-form-1-nested-list-item-img-outer"> <img src="images/uploads/login-flower.jpg"> </a>
+                                                <div class="pd-form-1-nested-list-item-body">
+                                                    <h3>Take a photo</h3>
+                                                    <p>Take a happy photo!</p>
+                                                </div>
+                                                <div class="alternative-card pd-form-1-nested-list-item-buttons">
+                                                    <a href="#" class="pd-form-1-nested-list-item-view-outer"><img src="images/design-assets/icon-magnifying-glass-gray-600.svg" alt="view icon" width="20" height="20"></a>
+                                                </div>
+                                            </div>
                                         </div>
                                         <footer>
                                             <a name="anchor" class="btn btn-outline-dark">Create Challenge</a>
+                                        </footer>
+                                    </div>
+                                    <div class="mb-3 pd-admin-form-1-nested-list-img-loader">
+                                        <header>
+                                            <h2>List</h2>
+                                            <p>Manage list items for the challenge below</p>
+                                        </header>
+                                        <div class="pd-form-1-nested-list-img-loader-list-body">
+                                            <div class="mb-3 pd-form-1-nested-list-img-loader-list-item">
+                                                <header class="pd-form-1-nested-list-img-loader-list-item-header">
+                                                    <div class="pd-form-1-nested-list-img-loader-item-btn-outer"><a href="#" name="anchor" class="pd-form-1-nested-list-item-btn"><img alt="re-order downwards icon" width="16" height="16" src="images/design-assets/icon-caret-white-up.svg"></a><a href="#" name="anchor" class="pd-form-1-nested-list-item-btn"><img src="images/design-assets/icon-caret-white.svg" alt="re-order downwards icon" width="16" height="16"></a>
+                                                    </div><a name="anchor"> <img src="images/design-assets/icon-trash-bin.svg" alt="delete icon" width="30" height="30"> </a>
+                                                </header>
+                                                <div class="mb-3">
+                                                    <label for="listTitle" class="form-label">Item Title</label>
+                                                    <input type="text" placeholder="Add a title for the list item" name="listTitle" class="form-control" id="listTitle">
+                                                </div>
+                                                <div class="mb-3">
+                                                    <label for="superCharge" class="form-label">Item Paragraph</label>
+                                                    <textarea type="text" rows="8" placeholder="Add text content for the list item" name="listPara" class="form-control" id="listPara"></textarea>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <footer>
+                                            <a name="anchor" class="btn btn-outline-dark">Add List Item</a>
                                         </footer>
                                     </div>
                                     <div class="mb-3">
